# simplesvg

./: Cargo.toml  README.rst  index.html  search-index.js
implementors/core/clone/: trait.Clone.js
implementors/core/default/: trait.Default.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/marker/: trait.Copy.js
simplesvg/: enum.Fig.html  index.html  sidebar-items.js  struct.Attr.html  struct.Color.html  struct.Svg.html  struct.Trans.html
src/: lib.rs
src/simplesvg/src/: lib.rs.html
